--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-seaborn==0.10.1
-matplotlib==3.2.2
+seaborn==0.12.2
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
 plotly==4.8.0
 pandas==1.1.3
 numpy==1.19.2
