--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-seaborn==0.12.2
-matplotlib==3.7.1
-matplotlib-inline==0.1.6
-plotly==4.8.0
-pandas==1.1.3
-numpy==1.19.2
-streamlit==0.68.0
-joblib==0.16.0
+joblib==1.3.1
+matplotlib==3.7.2
+numpy==1.25.1
+pandas==2.0.3
+requests==2.31.0
+scikit-learn==1.3.0
+seaborn==0.12.20
+streamlit==1.24.1
